--- a/app/globals.css
+++ b/app/globals.css
@@ -41,3 +41,12 @@ body {
   animation: scroll 30s linear infinite;
   will-change: transform;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
